# msbuild-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
src/msbuild_mcp_server/: server.py
