[project]
name = "msbuild-mcp-server"
version = "0.1.0"
description = "A lightweight MCP server for automating MSBuild projects and solutions builds."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "fastmcp>=2.0",
    "uv",
    "vswhere>=1.0.0",
    "pytest"
]