[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "msbuild-mcp-server"
dynamic = ["version"]
description = "A lightweight MCP server for automating MSBuild projects and solutions builds."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=2.0",
    "uv",
    "vswhere>=1.0.0"
]

[project.scripts]
msbuild-mcp-server = "msbuild_mcp_server.server:main"

[tool.setuptools]
packages = ["msbuild_mcp_server"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"

[project.optional-dependencies]
dev = [
    "pytest"
]